# plant-game

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: data.h  data_manager.cpp  data_manager.h  main.cpp  shader.cpp  shader.h  window_manager.cpp  window_manager.h
src/shaders/: fragment_shader.txt  vertex_shader.txt
